livekit-stunner/stunner/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: stunner-gatewayclass
spec:
  controllerName: stunner.l7mp.io/gateway-operator
  parametersRef:
    group: stunner.l7mp.io
    kind: GatewayConfig
    name: stunner-gatewayconfig
    namespace: stunner
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: udp-gateway
  namespace: stunner
  annotations:
    stunner.l7mp.io/service-type: LoadBalancer
    stunner.l7mp.io/public-address: "34.13.48.84"
    stunner.l7mp.io/public-port: "3478"
spec:
  gatewayClassName: stunner-gatewayclass
  addresses:
    - type: IPAddress
      value: 34.13.48.84
  listeners:
    - name: udp-listener
      port: 3478
      protocol: TURN-UDP
